aggiustamenti per rilascio  PQ, PP e NP

--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -5,8 +5,8 @@
  
 \begin{document}
  
-\renewcommand{\insertversion}{1.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
-\renewcommand{\TITOLODOC}{Norme d.0i Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
+\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\TITOLODOC}{Norme di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
  
 %%%%%%%%%%%%%%%%%%%%%%PARTE DA NON MODIFICARE%%%%%%%%%%%%%%%%%
@@ -140,7 +140,9 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%
      \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
-         1.1 & 21$\slash$01$\slash$2009 Aggiornamento in preparazione a RPP & Carollo Mirko        \\ 
+       2.0 & 23$\slash$01$\slash$2009 Verifica finale in preaparazione al rilascio per la RPP & Carollo Mirko        \\ 
+      \hline
+         1.1 & 21$\slash$01$\slash$2009 Aggiornamento strumenti di sviluppo & Carollo Mirko        \\ 
       \hline
       1.0 & 09$\slash$12$\slash$2008 Verifica finale in preparazione al rilascio & Geremia Mirco \\
       \hline
@@ -221,7 +223,7 @@ L'ambiente di sviluppo \LaTeX \ non \`e definito poich\`e non influisce nel risu
 L'editor utilizzato per la scrittura del codice JavaScript \`e Emacs con js2-mode; quest'ultimo permette di catturare la maggior parte degli errori di battitura e suggerisce la sintassi corretta mentre il codice viene digitato. 
  
 \subsezione{Ricerca di errori}
-Oltre alle utili funzionalit\`a di js2-mode, l'azienda utilizza il programma \underline{JSLint}, un noto verificatore di codice JavaScript, il quale rilevera' tutti gli altri errori.
+Oltre alle utili funzionalit\`a di js2-mode, l'azienda utilizza il programma JSLint, un noto verificatore di codice JavaScript, il quale rilever\`a tutti gli altri errori.
 
 \subsezione{Copertura del codice}
 Si utilizza lo strumento JSCoverage, che offre informazioni utili per la construzione di un test di copertura, ed \`e compatibile con tutti i morderni browser. Grazie ad esso sar\`a possibile determinare quali righe di codice non saranno eseguite dai test di unit\`a.
