--- a/doc/TeX/base.tex
+++ b/doc/TeX/base.tex
@@ -132,3 +132,5 @@
 \newcommand{\secindent}{18}
 \newcommand{\normindent}{8}
 \newcommand{\code}[1]{{\bfseries \texttt{#1}}}
+\newcommand{\paragrafo}[1]{\leftskip=36pt \paragraph{#1} \leftskip=54pt}
+\newcommand{\subparagrafo}[1]{\leftskip=54pt \subparagraph{#1} \leftskip=72pt}
